fix(bun): disable node cache when using bun package manager
setup-node cache expects package-lock.json which doesn't exist when using bun.lock

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
           registry-url: 'https://registry.npmjs.org'
-          cache: ${{ inputs.package-manager == 'bun' && 'npm' || inputs.package-manager }}
+          cache: ${{ inputs.package-manager != 'bun' && inputs.package-manager || '' }}
 
       - name: Install dependencies (npm)
         if: inputs.package-manager == 'npm'
