--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -75,7 +75,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
-          cache: ${{ inputs.package-manager == 'bun' && 'npm' || inputs.package-manager }}
+          cache: ${{ inputs.package-manager != 'bun' && inputs.package-manager || '' }}
 
       - name: Install dependencies (npm)
         if: inputs.package-manager == 'npm'
