refactor(ci): rename job from 'ci' to 'build-and-test'
Avoids redundant "CI / ci" display in GitHub Actions UI

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -55,7 +55,7 @@ on:
         default: 'npm run build'
 
 jobs:
-  ci:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
